<resources>
    <string name="app_name">Catz</string>
    <string name="nav_list">List</string>
    <string name="nav_favorites">Favorites</string>
</resources>